# Algorithms

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: c-cpp.yml  cpp.copy  cpp.yml
binarySearch/: BSTests.cpp  CMakeLists.txt  binarySearch.cpp  binarySearch.hpp  main.cpp
bubbleSort/: CMakeLists.txt  areEqual.cpp  areEqualTests.cpp  bubbleSort.cpp  bubbleSort.hpp  bubbleSortTests.cpp
fibonacci/: CMakeLists.txt
fibonacci/src/: Fibonacci.cpp  Fibonacci.hpp
fibonacci/tests/: FibonacciTests.cpp  TestingValues.cpp  TestingValues.hpp
googletest/: CMakeLists.txt  CMakeLists.txt.in
nwd/: CMakeLists.txt  Nwd.cpp  Nwd.hpp  NwdTests.cpp  Nww.hpp  NwwTests.cpp  TestingValues.cpp  TestingValues.hpp
nwd/src/: Nww.cpp
nwd/tests/: NwdTests.cpp
palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.hpp  PalindromeTests.cpp
primeNumbers/: CMakeLists.txt  GenPrimeNumbers.cpp  GenPrimeNumbers.hpp  GenPrimeNumbersTests.cpp  IsPrimeNumber.cpp  IsPrimeNumber.hpp  IsPrimeNumberTests.cpp  main.cpp
quickSort/: CMakeLists.txt  main.cpp
quickSort/src/: QuickSort.cpp  QuickSort.hpp
quickSort/tests/: QuickSortTests.cpp
sortingAlgorithms/: CMakeLists.txt  areEqual.hpp  quickSort.cpp  quickSortTests.cpp
